multilayer navigation on mobile

--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -14,7 +14,8 @@
 		@media (max-width: $tablet)
 			font-size: 22px
 	@media (max-width: $tablet)
-		background: url('../img/bg/map-background-1.jpg') 50% 50% no-repeat
+		// background: url('../img/bg/map-background-1.jpg') 50% 50% no-repeat
+		background-color: #eef2f8
 		background-size: 100% 100%
 		background-size: cover
 		padding-left: 20px
