--- a/src/partials/modals.jade
+++ b/src/partials/modals.jade
@@ -69,7 +69,7 @@
 				input(type='hidden', name='PARAMS_HASH', value='72fe7e53c6b5d5dbed07f4c9e3169835')
 				input(type='submit', name='submit', value='Отправить')
 	.close.button
-#mobile-menu.modal
+#mobile-menu.mobile-menu.modal
 	.menu
 		.wrap
 			ul
