--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -125,7 +125,7 @@
 .fill
 .menu
 	.wrap
-		.gamburger(data-modal="#mobile-menu")
+		.gamburger(data-mobile-modal="#mobile-menu")
 			span
 			span
 			span
