--- a/src/css/elements.sass
+++ b/src/css/elements.sass
@@ -166,16 +166,19 @@
 				display: block
 			.inner-holder
 				width: calc(100vw - 300px)
-				display: flex
-				column-count: 4
 				& > li
-					display: inline-block
-					vertical-align: top
+					// display: inline-block
+					// vertical-align: top
 					width: 400px
+					width: 50%
 					padding: 0 20px
+					img
+						width: 100%
 					& > a
 						text-transform: uppercase
 						font-weight: 700
+						display: block
+						width: 100%
 						&:hover
 							background: none
 					li
