--- a/src/price-list.jade
+++ b/src/price-list.jade
@@ -52,11 +52,11 @@ html(lang='en')
 																	| Общество с ограниченной ответственностью (ООО)
 															td.price-term
 																pre.
-																	(учредитель физ. лицо) 5-7 рабочих дней
+																	(учредитель физ. лицо) 5-7 рабочих дней <br />
 																	(учредитель юр. лицо) 5-7 рабочих дней
 															td.price-value
 																pre.
-																	2 500 грн.<br />
+																	2 500 грн <br />
 																	3 500 грн. 
 											.clear
 											.price-item
@@ -82,7 +82,7 @@ html(lang='en')
 																	| Частное предприятие (ЧП)
 															td.price-term
 																pre.
-																	8-10 рабочих дней
+																	8-10 рабочих дней <br />
 																	3-4 рабочих дня
 															td.price-value
 																pre.
@@ -197,7 +197,7 @@ html(lang='en')
 																a(href='http://justicon.ua/uslugi/korp/registratsiya/obedin-predpr/kooperativ.html') Кооператив
 															td.price-term
 																pre.
-																	(учредитель физ. лицо) 5-7 рабочих дней
+																	(учредитель физ. лицо) 5-7 рабочих дней <br />
 																	(учредитель юр. лицо) 5-7 рабочих дней
 															td.price-value
 																pre.
@@ -226,7 +226,7 @@ html(lang='en')
 																a(href='http://justicon.ua/uslugi/korp/registratsiya/obedin-predpr/politicheskaya-partiya.html') Политическая партия
 															td.price-term
 																pre.
-																	30-45 рабочих дней
+																	30-45 рабочих дней <br />
 																	22 рабочих дня
 															td.price-value
 																pre.
@@ -245,8 +245,8 @@ html(lang='en')
 																	| Представительство иностранной компании в Украине
 															td.price-term
 																pre.
-																	от 60 рабочих дней
-																	от 30 рабочих дней
+																	от 60 рабочих дней <br />
+																	от 30 рабочих дней <br />
 																	от 10 рабочих дней
 															td.price-value
 																pre.
@@ -383,7 +383,7 @@ html(lang='en')
 																| Изменение состава учредителей
 														td.price-term
 															pre.
-																(участник физическое лицо) 3-5 рабочих дней
+																(участник физическое лицо) 3-5 рабочих дней <br />
 																(участник юридическое лицо) 3-5 рабочих дней
 														td.price-value
 															pre.
@@ -962,11 +962,11 @@ html(lang='en')
 																	| Лицензия на металлолом цветных и черных металлов
 															td.price-term
 																pre.
-																	от 35 рабочих дней
+																	от 35 рабочих дней <br />
 																	ускоренные сроки
 															td.price-value
 																pre.
-																	от 10 000 грн.
+																	от 10 000 грн. <br />
 																	обсуждаются индивидуально
 											.clear
 										#bx_4145281613_141.h3.trigger
@@ -1050,7 +1050,7 @@ html(lang='en')
 																	| Лицензия на торговлю пестицидами и агрохимикатами
 															td.price-term
 																pre.
-																	до 22 рабочих дней
+																	до 22 рабочих дней <br />
 																	от 22 рабочих дней
 															td.price-value
 																pre.
@@ -1223,13 +1223,13 @@ html(lang='en')
 																| Подготовка процессуальных документов
 														td.price-term
 															pre.
-																подготовка искового заявления
-																подготовка заявления, ходатайства, пояснения
+																подготовка искового заявления <br />
+																подготовка заявления, ходатайства, пояснения <br />
 																подготовка апелляционной или кассационной жалобы
 														td.price-value
 															pre.
-																от 500 грн.
-																от 200 грн. 
+																от 500 грн. <br />
+																от 200 грн. <br />
 																от 1 000 грн.
 										.clear
 										.price-item
@@ -1548,11 +1548,11 @@ html(lang='en')
 																	| Оформление технического паспорта с проведением технической инвентаризации
 															td.price-term
 																pre.
-																	стандартные сроки
+																	стандартные сроки <br />
 																	ускоренные сроки
 															td.price-value
 																pre.
-																	от 6 грн/м2
+																	от 6 грн/м2 <br />
 																	по договоренности
 											.clear
 											.price-item
@@ -1564,11 +1564,11 @@ html(lang='en')
 																	| Присвоение почтового, строительного адреса объекту недвижимого имущества
 															td.price-term
 																pre.
-																	стандартные сроки
+																	стандартные сроки <br />
 																	ускоренные сроки
 															td.price-value
 																pre.
-																	от 1 200 грн.
+																	от 1 200 грн. <br />
 																	по договоренности
 											.clear
 											.price-item
@@ -1580,11 +1580,11 @@ html(lang='en')
 																	| Получение заключения относительно паевого участия в создании инфраструктуры
 															td.price-term
 																pre.
-																	стандартные сроки
+																	стандартные сроки <br />
 																	ускоренные сроки
 															td.price-value
 																pre.
-																	от 1 200 грн.
+																	от 1 200 грн. <br />
 																	по договоренности
 											.clear
 									#bx_4145281613_152.h2.trigger
