--- a/src/css/global.sass
+++ b/src/css/global.sass
@@ -149,9 +149,6 @@ textarea
 	padding-left: 18px
 	padding-right: 18px
 	text-align: left
-	&::-webkit-input-placeholder, &:-moz-placeholder
-		color: #A9A9A9
-		font-size: 18px
 //	END SELECT
 
 // INPUT
@@ -164,7 +161,14 @@ input
 	font-weight: 600
 	&:focus
 		outline: none
-	&::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder, &:-ms-input-placeholder
+input, textarea
+	padding: 14px
+	&::placeholder
+		color: #666
+		font-size: 16px
+		font-weight: 400
+		line-height: 1em
+
 //	END INPUT
 
 // CHECKBOX
