when sidebar opened, wrapper is slide

--- a/src/about.jade
+++ b/src/about.jade
@@ -256,6 +256,11 @@ html(lang='en')
 								| В связи с большим количеством заявок, получаемых ежедневно, компания не подтверждает получение заявки и документов по телефону или по электронной почте.
 			.clear
 
+		.wrap
+			.consult-me-block
+				h2 Обращайтесь и мы качественно и в кратчайший срок выполним поставленные вами задачи!
+				a.btn.hot(href="#") Заказать услугу
+				a.btn(href="#") Заказать консультацию
 
 		include ./partials/footer.jade
 		include ./partials/modals.jade
