--- a/src/css/modals.sass
+++ b/src/css/modals.sass
@@ -1,3 +1,20 @@
+// TODO remove it
+.opened#test-navigation
+	a
+		// padding: 0 20px
+		text-align: center
+		color: #333
+		display: block
+		line-height: 40px
+		font-size: 18px
+		font-weight: 400
+		text-transform: uppercase
+		border-bottom: 1px solid rgba(0,0,0,0.1)
+		&:hover
+			background-color: #6bb6ee
+		&:first-child
+			border-top: 1px solid rgba(0,0,0,0.1)
+
 
 // MODALS
 .modal
