--- a/src/main.jade
+++ b/src/main.jade
@@ -15,7 +15,7 @@ html(lang='en')
 							.caroufredsel_wrapper
 								.carousel
 									.item
-										img(src="/img/content/user-1.png", alt="test")
+										img(src="img/content/user-1.png", alt="test")
 										h1
 											div
 												font(color='#ff0000') СКИДКА 5%
