--- a/src/test.jade
+++ b/src/test.jade
@@ -7,7 +7,7 @@ html(lang='en')
 
 	body
 
-		.modal-holder#mobile-menu(data-cross="cross-navigation").opened
+		.modal-holder#test-navigation(data-cross="cross-navigation").opened
 			.modal-content
 				.modal-container
 					.popup-navigation
