--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -41,8 +41,16 @@
 .wrap
 	margin: 0 auto
 	width: 72.7%
+	transition: transform 0.8s
 	@media (max-width: $tablet)
 		width: 100%
+
+.sidebar-opened
+	.container
+		overflow: hidden
+		& > .wrap
+			transform: translateX(280px)
+
 
 .container
 	display: block
@@ -138,7 +146,7 @@ body > .menu
 		height: 50px
 		width: 100%
 		margin: 0
-		overflow: auto
+		// overflow: auto
 		& > ul
 			@media (max-width: $tablet)
 				display: none
@@ -1546,6 +1554,7 @@ body > .menu
 					font-size: 16px
 					font-weight: 400
 					line-height: 20px
+					padding-right: 20px
 					// position: relative
 					@media (max-width: $tablet)
 						width: 100%
