--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -859,7 +859,7 @@ body > .menu
 		font-weight: 400
 		line-height: 20px
 		margin-top: 23px
-		padding-left: 120px
+		// padding-left: 120px
 		@media (max-width: $tablet)
 			padding-left: 20px
 
