--- a/src/test.jade
+++ b/src/test.jade
@@ -36,5 +36,8 @@ html(lang='en')
 							li
 								a(href="partners.html")
 									span Партнеры
+							li
+								a(href="press.html")
+									span Пресс-центр
 
 	include ./partials/scripts.jade
