--- a/src/css/concated.sass
+++ b/src/css/concated.sass
@@ -2,6 +2,7 @@ $font-stack: 14px/1.42em "OpenSans", Arial, sans-serif
 $large: 1300px
 $medium: 1260px
 $tablet: 1000px
+$large: 1200px
 $mobile-large: 760px
 $mobile-medium: 640px
 $mobile-small: 480px
@@ -13,8 +14,6 @@ $main-color: #6bb6ee
 @import global
 @import elements
 @import main
-@import articles
-@import singlearticle
 @import modals
 @import foot
 @import media
