--- a/src/partials/scripts.jade
+++ b/src/partials/scripts.jade
@@ -2,6 +2,7 @@ script(src='vendor/jquery/dist/jquery.js')
 script(src='vendor/jquery.browser/dist/jquery.browser.min.js')
 script(src='vendor/smoothscroll-for-websites/SmoothScroll.js')
 script(src='vendor/wow/dist/wow.js')
+script(src='vendor/owl.carousel/src/js/owl.carousel.js')
 //- script(src='http://ditchclothing.com/themes/shop/assets/js/vendor/imagesloaded.pkgd.min.js')
 script(src='vendor/masonry/dist/masonry.pkgd.min.js')
 script(src='js/pogorelov.js')
