--- a/src/partials/navigation.jade
+++ b/src/partials/navigation.jade
@@ -6,7 +6,7 @@
 
 .header
 	.wrap
-		a.logotype-holder(href='/')
+		a.logotype-holder(href='index.html')
 			// here is for SEO
 			.logo.logo-ru.invisible Justicon
 			img(src="http://justicon.ua/bitrix/templates/usticon/i/logo.png", alt="Justicon")
@@ -15,7 +15,7 @@
 				.mainphone.fl (044) 221 4000
 				.phones-list
 					.life.fl
-						|  (093) 1000 176 
+						|  (093) 1000 176
 					.clear
 					.viber.fl
 						|  (093) 1000 176
@@ -35,7 +35,7 @@
 						.inner
 							.block-item
 								.title
-									a(href='/about/') О компании
+									a(href='about.html') О компании
 							.block-item
 								.title
 									a(href='/uspeshnyy-rezultat/') Успешный результат
@@ -66,7 +66,7 @@
 								.title
 									a(href='/press-tsentr/rassylka/') Рассылка
 				li
-					a(href='/kontakty/')
+					a(href='contacts.html')
 						span Контакты
 					.submenu2
 						a.close(href='#')
@@ -114,7 +114,7 @@
 							.hr.separate10
 							.separate10.hg1
 							span.blue
-								a.r-pimp(href='/kontakty/') Посмотреть больше контактов
+								a.r-pimp(href='contacts.html') Посмотреть больше контактов
 
 		.langs
 			a.rus.actlang(href='/') RU
